--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
 <!--   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 </head>
-<body class="mat-app-background" style="background-image: url('assets/fondo6.jpeg'); background-repeat: no-repeat;
+<!-- <body style="background-image: url('http://52.5.47.64/VC/Media/Backgrounds/BG-INGRESO-VC5.png'); background-repeat: no-repeat;
+background-attachment: fixed; background-position: center center; background-size: cover; "> -->
+<body style="background-image: url('http://52.5.47.64/VC/Media/noimage.png'); background-repeat: no-repeat;
 background-attachment: fixed; background-position: center center; background-size: cover; ">
   <app-root> </app-root>
 </body>
