--- a/src/index.html
+++ b/src/index.html
@@ -18,8 +18,8 @@
 </head>
 <!-- <body style="background-image: url('http://52.5.47.64/VC/Media/Backgrounds/BG-INGRESO-VC5.png'); background-repeat: no-repeat;
 background-attachment: fixed; background-position: center center; background-size: cover; "> -->
-<body style="background-image: url('http://52.5.47.64/VC/Media/noimage.png'); background-repeat: no-repeat;
-background-attachment: fixed; background-position: center center; background-size: cover; ">
+<body style="background-image: url('http://52.5.47.64/VC/Media/Backgrounds/BG-INGRESO-VC5.png'); background-repeat: no-repeat;
+background-attachment: fixed; background-position: center center; background-size: cover;">
   <app-root> </app-root>
 </body>
 </html>
